--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.3",
     "ts-node": "^10.9.2",
     "tsup": "^8.3.0",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "prisma": "^6.14.0",
     "zod": "^4.0.17"
